B&L QA/objects/Link_Management__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines link and its part for dynamic links in VF pages</description>
    <fields>
        <fullName>Context__c</fullName>
        <description>context of the link; where it is displayed/usable</description>
        <label>Context</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Value__c</fullName>
        <description>Extension to the value for the link part, if the link exceeds 255 characters.</description>
        <label>Extended_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Determines the value for the link part</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Link Management</label>
</CustomObject>